# wp-bench

./: .gitignore  .wp-env.json  .wp-env.override.json.example  AGENTS.md  README.md  wp-bench.example.yaml
.agents/skills/wp-bench-execution-tests/: SKILL.md
datasets/: README.md  export_dataset.py
datasets/suites/wp-abilities-v1/abilities/: core.json
datasets/suites/wp-abilities-v1/knowledge/: abilities-api.json
datasets/suites/wp-core-v0.0.1/: execution.json  knowledge.json
datasets/suites/wp-core-v1/execution/: abilities-api.json  ai-client.json  block-api.json  block-bindings.json  block-hooks.json  caching.json  comments-users.json  connectors-api.json  cron.json  database.json  font-library.json  gb-block-api.json  gb-block-bindings.json  gb-block-editor.json  gb-block-hooks.json  gb-font-library.json  hooks.json  (+18 more)
docs/: test-execution-logging.md
notebooks/: results_report.ipynb
python/: README.md  pyproject.toml
python/tests/: test_dataset_filtering.py  test_environment.py  test_execution_dataset.py  test_knowledge.py  test_models.py  test_reference_solution_mode.py  test_scoring.py  test_static_analysis_runtime.py
python/wp_bench/: __init__.py  callbacks.py  cli.py  config.py  core.py  datasets.py  environment.py  knowledge.py  models.py  output.py  scoring.py  utils.py
runtime/: .wp-env.json  Dockerfile  composer.json  docker-entrypoint.sh  package-lock.json  package.json  verify-runtime.php  wp-bench-runtime.php
runtime/src/: class-cli-ability.php  class-cli-verifier.php  class-sandbox.php  class-static-analysis.php  class-verifier.php
(+28 files in other folders)
